logs/products.groupuserfolder.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder'...
Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/DynaList.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/DynaList.py", line 42
    raise RuntimeError, "UserList.__cmp__() is obsolete"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/GroupUserFolder/Extensions'...
Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/GRUFFolder.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/GRUFFolder.py", line 123
    raise "ValueError", "Please put an acl_users in %s " \
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/GRUFUser.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/GRUFUser.py", line 413
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/GroupDataTool.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/GroupDataTool.py", line 177
    raise 'GroupDataError', "Can't find group data"
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/GroupUserFolder.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/GroupUserFolder.py", line 584
    raise NotImplementedError, "Attribute searching is only supported for LDAPUserFolder by now."
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/GroupsTool.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/GroupsTool.py", line 247
    raise ValueError, "Group '%s' already exists." % (id, )
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/Installation.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/Installation.py", line 213
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/LDAPGroupFolder.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/LDAPGroupFolder.py", line 101
    raise RuntimeError, "You must change your groups source in GRUF if you do not have a LDAPUserFolder as a users source."
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/LDAPUserFolderAdapter.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/LDAPUserFolderAdapter.py", line 68
    raise RuntimeError, msg
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/Log.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/Log.py", line 71
    raise ValueError, "Invalid log level :", level
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/GroupUserFolder/debian'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/doc'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/dtml'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/interfaces'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/skins'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf'...
Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/change_password.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/change_password.py", line 23
    return context.password_form(context,
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/getUsersInGroup.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/getUsersInGroup.py", line 21
    return avail
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/gruf_ldap_required_fields.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf/gruf_ldap_required_fields.py", line 11
    return {
           ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/GroupUserFolder/skins/gruf_plone_2_0'...
Listing './lib/python3.5/site-packages/Products/GroupUserFolder/tests'...
Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/GRUFTestCase.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/GRUFTestCase.py", line 63
    print "Log module not available"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/Log.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/Log.py", line 71
    raise ValueError, "Invalid log level :", level
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/framework.py", line 94
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/testGroupUserFolderAPI.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/testGroupUserFolderAPI.py", line 504
    else: raise "AssertionError", "Should raise"
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/testInterface.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/testInterface.py", line 137
    raise RuntimeError, "%d (over %d) MISSING TESTS:\n%s do not have a test associated." % (
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/testMultipleSources.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/testMultipleSources.py", line 84
    print "Log module not available"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/testPloneInterface.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/testPloneInterface.py", line 78
    print "Log module not available"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/GroupUserFolder/tests/testUserAPI.py'...
***   File "./lib/python3.5/site-packages/Products/GroupUserFolder/tests/testUserAPI.py", line 119
    raise AssertionError, "Should raise a ValueError here"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/GroupUserFolder/www'...
Listing './lib/python3.5/site-packages/Products.GroupUserFolder-3.55.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
